<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:foreground="@drawable/paper"
            app:cardElevation="10dp"
            app:checkedIcon="@drawable/paper"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/book_image"
                    app:srcCompat="@drawable/ic_launcher_background" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@android:style/Widget.Material.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:forceDarkAllowed="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressDrawable="@drawable/star"
                    android:progressTint="@color/teal_200"
                    android:stepSize="0.1" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/_10_00"
                    android:textSize="18sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/book_subtitle"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/authors"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/authors"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_book" />

                <TextView
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:text="@string/find_more" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:gravity="bottom|center_horizontal">

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="2dp"
                android:insetBottom="0dp"
                app:icon="@android:drawable/ic_menu_share"
                app:iconPadding="10dp"
                app:rippleColor="#75BDC6" />

            <ToggleButton
                android:id="@+id/isFavouriteBtn"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="#75BDC6"
                android:buttonTint="@color/purple_700"
                android:fontFamily="monospace"
                android:minWidth="40dp"
                android:minHeight="40dp"
                android:textColor="@color/white"
                android:textOff="@string/add_to_favourites"
                android:textOn="@string/delete_from_favourites" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
